Fix nav bullets on small screen

--- a/flexBusiness/styles.css
+++ b/flexBusiness/styles.css
@@ -37,7 +37,7 @@ body {
   margin: 1rem;
   padding: 1rem;
   border-radius: 1rem;
-  color: #037f8c;
+  color: #020f59;
 }
 
 .large-card {
@@ -69,6 +69,7 @@ header {
 nav .logo {
   flex: 1;
   padding-top: 5rem;
+  color: #020f59;
 }
 
 nav ul {
@@ -83,28 +84,17 @@ nav a {
   font-weight: 700;
 }
 
-nav li,
-nav li:active,
-nav li:visited {
-  color: #92a699;
-  transition: all 0.3s ease-in-out;
-}
-
 nav a,
 nav a:active,
 nav a:visited {
-  color: #92a699;
+  color: #020f59;
   transition: all 0.3s ease-in-out;
 }
 
 nav a:hover {
   color: #a63c24;
-}
-
-nav li:hover {
-  transform: scale(1.8);
-  background-color: #92a699;
-  border-radius: 1rem;
+  font-size: 2rem;
+  text-decoration: underline;
 }
 
 /* Portfolio */
@@ -124,6 +114,7 @@ main {
   height: 250px;
   overflow: hidden;
   background-color: white;
+  margin-bottom: 2.5rem;
 }
 .landscape-img {
   width: 100%;
@@ -156,7 +147,7 @@ main {
   nav {
     left: 0;
     top: 0;
-    background-color: #020f59;
+    background-color: #92a699;
     position: fixed;
     flex: 1;
     text-align: center;
@@ -186,12 +177,13 @@ main {
     display: flex;
     flex-direction: row;
     position: fixed;
-    background-color: #020f59;
+    background-color: #92a699;
     justify-content: space-between;
     width: 100%;
     height: 7.5rem;
     align-items: center;
     z-index: 10;
+    box-shadow: 5px 0 5px black;
   }
 
   nav li {
@@ -199,8 +191,8 @@ main {
     text-decoration: none;
   }
 
-  nav a {
-    text-decoration: none;
+  nav li::marker {
+    content: none;
   }
 
   nav .logo {
